--- a/ui-library/scss/main.scss
+++ b/ui-library/scss/main.scss
@@ -89,6 +89,10 @@ body {
 	padding: 10px;
 	font-family: 'KievitWeb';
 
+	/* Blacklight/geoblacklight resets */
+	font-size: initial;
+	line-height: initial;
+
 	@include bp(screen1) {
 		padding: 10px 20px;
 	}
